# tree-sitter-ink

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Justfile  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ink.h  tree-sitter-ink.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_ink/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
doc/img/: showcase.webm
editors/helix/: languages.toml
editors/helix/runtime/queries/ink/: indents.scm
queries/: highlights.scm
queries/editors/helix/: languages.toml
queries/editors/helix/runtime/queries/ink/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basics.txt
test/corpus/1_basics/: 1_content.txt  2_choices.txt  3_knots.txt  4_diverts-1.txt  4_diverts-2.txt  4_diverts.txt  5_branching.txt  6_includes_and_stitches.txt  7_varying_choices.txt  8_variable_text.txt  9_game_queries_and_functions.txt
test/corpus/2_weave/: 1_gathers.txt  2_nested_flow.txt  3_tracking_a_weave.txt
test/corpus/3_variables_and_logic/: 1_global_variables.txt  2_logic.txt  3_conditional_blocks.txt  4_temporary_variables.txt  5_functions.txt  6_constants.txt
test/corpus/4_advanced_flow_control/: 1_tunnels.txt  2_threads.txt
test/corpus/5_advanced_state_tracking/: 1_basic_lists.txt  2_reusing_lists.txt  3_list_values.txt  4_multivalued_lists.txt
test/corpus/6_international_character_support/: 1_identifiers.txt
test/corpus/7_running_your_ink/: 1_choice_tags.txt  2_dynamic_tags.txt  3_external_functions.txt
test/corpus/x_issues/: 10_choice_in_switch.txt  13_insane_identifiers.txt
test/highlight/: showcase.ink
test/tags/: showcase.ink
