[package]
name = "tree-sitter-ink"
description = "Ink grammar for tree-sitter"
version = "24.6.18"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ink"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-ink"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[features]
type-sitter = ["dep:rust-format", "dep:type-sitter-gen", "dep:type-sitter-lib"]

[dependencies]
tree-sitter = ">=0.22.2"

[dependencies.type-sitter-lib]
git = "https://github.com/wldmr/type-sitter.git"
branch = "3-replacement-names-clash"
optional = true

[build-dependencies]
cc = "1.0.87"
rust-format = { version = "0.3.4", optional = true }

[build-dependencies.type-sitter-gen]
git = "https://github.com/wldmr/type-sitter.git"
branch = "3-replacement-names-clash"
optional = true
