[package]
name = "tree-sitter-ink"
description = "Ink grammar for tree-sitter"
version = "24.6.18"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ink"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-ink"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.87"
